demo-app-no-persistence/07-deployment-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-without-persistence
  namespace: demo-wordpress-mysql-without-persistence
  labels:
    app: mysql-without-persistence
spec:
  selector:
    matchLabels:
      app: mysql-without-persistence
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql-without-persistence
        tier: mysql
    spec:
      serviceAccountName: sa-wordpress-without-persistence
      containers:
      - image: mysql:latest
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        emptydir: {}
