demo-app-no-persistence/05-service-mysql.yaml
#MYSQL
apiVersion: v1
kind: Service
metadata:
  name: mysql-without-persistence
  namespace: demo-wordpress-mysql-without-persistence
  labels:
    app: mysql-without-persistence
spec:
  ports:
    - port: 3306
  selector:
    app: mysql-without-persistence
    tier: mysql
  clusterIP: None
