demo-app-no-persistence/12-route-to-wordpress.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: demo-no-pers
  namespace: demo-wordpress-mysql-without-persistence
spec:
  to:
    kind: Service
    name: wordpress-without-persistence
  port:
    targetPort: 80
  wildcardPolicy: None
